--- a/_config.yml
+++ b/_config.yml
@@ -126,7 +126,7 @@ l  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg
       # url: "https://facebook.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-       url: "https://github.com/jcancheta92"
+      # url: "https://github.com/jcancheta92"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
