--- a/_config.yml
+++ b/_config.yml
@@ -126,7 +126,7 @@ author:
       # url: "https://facebook.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-        url: https://github.com/jcancheta92
+      # url: "https://github.com/jcancheta92"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
