--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,8 @@ main:
     url: /about/
   - title: "Projects"
     url: /projects/
+  - title: "Portfolio"
+    url: /portfolio-archive/
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
